<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ro.pub.cs.systems.eim.practicaltest02.gui.PracticalTest02MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/server"
            android:textSize="25sp"
            android:textStyle="bold" />
        
    </LinearLayout>

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginRight="22dp"
        android:layout_marginTop="29dp"
        android:text="@string/connect" />

    <EditText
        android:id="@+id/server_port_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/connect_button"
        android:layout_toLeftOf="@+id/connect_button"
        android:ems="10"
        android:hint="@string/server_port" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/client_address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/server_port_edit_text"
        android:layout_below="@+id/connect_button"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/client_address" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/client_address_edit_text"
        android:layout_marginTop="72dp"
        android:baselineAligned="false" >
        
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        
            <EditText
                android:id="@+id/command"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/command" />
        
        </ScrollView>
        
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
       
       <Button
        android:id="@+id/command_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="22dp"
        android:layout_marginTop="29dp"
        android:text="@string/cmd_button" />

        
        </ScrollView>
        
    </LinearLayout> 
android:layout_width="wrap_content"
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/server_port_edit_text"
        android:layout_below="@+id/connect_button"
        android:layout_marginRight="14dp"
        android:layout_marginTop="33dp"
        android:text="@string/client"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/client_port_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/client_port" />

</RelativeLayout>